Fix pop-up overflow in IE

--- a/angular/src/app/layout-components/one-time-popup/one-time-popup.component.scss
+++ b/angular/src/app/layout-components/one-time-popup/one-time-popup.component.scss
@@ -28,6 +28,7 @@ $popup-box-width: 500px;
     z-index: 2;
 
     .text {
+      width: 100%;
       font-size: 24px;
       line-height: 28px;
     }
